
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/table";

import "prototype/type.proto";

message so_post {
	uint64                                 post_id                 =      1;
    string                                 category                =      2;
    prototype.account_name                 author                  =      3;
    string                                 title                   =      4;
    string                                 body                    =      5;
    repeated                      string                               tags				     =      6;
    prototype.time_point_sec               created                 =      7;
    prototype.time_point_sec               last_payout             =      8;
    uint32                                 depth                   =      9;
    uint32                                 children                =      10;
    uint64                                 root_id                 =      11;
    uint64                                 parent_id               =      12;
    uint64                                 vote_cnt                =      13;
    repeated                      prototype.beneficiary_route_type     beneficiaries           =      14;
    prototype.time_point_sec               cashout_time            =      15;
    uint64                                 weighted_vp             =      16;
      
}


message so_mem_post_by_post_id {
	uint64                              	post_id             = 1;
}


message so_mem_post_by_category {
	string                              	category            = 1;
}


message so_mem_post_by_author {
	prototype.account_name              	author              = 1;
}


message so_mem_post_by_title {
	string                              	title               = 1;
}


message so_mem_post_by_body {
	string                              	body                = 1;
}


message so_mem_post_by_tags {
	repeated  	string                            	tags				 = 1;
}


message so_mem_post_by_created {
	prototype.time_point_sec            	created             = 1;
}


message so_mem_post_by_last_payout {
	prototype.time_point_sec            	last_payout         = 1;
}


message so_mem_post_by_depth {
	uint32                              	depth               = 1;
}


message so_mem_post_by_children {
	uint32                              	children            = 1;
}


message so_mem_post_by_root_id {
	uint64                              	root_id             = 1;
}


message so_mem_post_by_parent_id {
	uint64                              	parent_id           = 1;
}


message so_mem_post_by_vote_cnt {
	uint64                              	vote_cnt            = 1;
}


message so_mem_post_by_beneficiaries {
	repeated  	prototype.beneficiary_route_type  	beneficiaries       = 1;
}


message so_mem_post_by_cashout_time {
	prototype.time_point_sec            	cashout_time        = 1;
}


message so_mem_post_by_weighted_vp {
	uint64                              	weighted_vp         = 1;
}


message so_list_post_by_created {
	prototype.time_point_sec            	created             = 1;
	uint64                              	post_id             = 2;
}


message so_unique_post_by_post_id {
	uint64                              	post_id             = 1;
}
